# chat-tts

./: .env.example  .gitignore  .prettierrc  .pylintrc  README.md  authflow.ts  package-lock.json  package.json  sample-config.yml  svelte.config.js  vite.config.ts
captain/: .env.example  .gitignore  authflow.ts  eslint.config.js  package.json  sample-config.yml  sample-edge-config.yml  svelte.config.js
captain/songs/: songs.example.json
captain/src/: hooks.server.ts
captain/src/lib/: ConfigEditor.svelte  Faker.svelte  LRUcache.ts  commands.ts  config.ts  controller.ts  reconnectingWs.ts  remoteTTSMessages.ts  seventv.ts  twitch.ts  utils.ts
captain/src/lib/api/: attachments.ts  bits.ts  points.ts  subtiers.ts
captain/src/lib/bus/: fakeMessage.ts  messages.ts
captain/src/lib/config/: schema.ts
captain/src/lib/controllers/: command.ts  index.ts  obs.ts  remoteChatTTS.ts  song.ts  trinket.ts  voice.ts
captain/src/lib/server/: db.ts  logger.ts  runtime.ts  twitchAuth.ts  twitchPolls.ts  twitchRedeems.ts
captain/src/lib/songs/: ArtistWidget.svelte  audioEngine.svelte.ts  commands.ts  constants.ts  filesystemProvider.ts  messages.ts  (+3 more)
captain/src/routes/: +page.svelte
captain/static/: flame.json
captain/support/: beepboxstandalone.ts  deploy.ts  index.ts  picom.ts  websocket.ts
checkin/: .pylintrc  README.md  interfaces.py  main.py  pyproject.toml
discordbot/: db.ts  deploy.ts  index.ts
heavy/: README.md  chatterbox_runner.py  kokoro_openrouter.py  pyproject.toml
heavy-image/: Dockerfile  Modelfile  README.md  deploy-run.sh  download_kiki.py
heavy-image/chatterbox-deploy/: .gitignore  README.md  kokoro_server.py  requirements.txt  server.py
kiki/: .gitignore  README.md  kiki.py  prepare_messages.py  pyproject.toml
kikimaki-rs/: Cargo.toml  template.html
kikimaki-rs/kiki/: Cargo.toml
kikimaki-rs/kiki/src/: main.rs
kikimaki-rs/shared/: Cargo.toml
kikimaki-rs/shared/src/: ai.rs  lib.rs  memory.rs  obs.rs  twitch.rs  webserver.rs
maki/: .gitignore  README.md  actions.py  autonomous.py  commands.json  config.py  deps.py  logger.py  main.py  memory.py  pyproject.toml
maki/speech/: whisperer.py
maki/tools/: calculator.py  communication.py  evaluator.py  random_tool.py  screenshot.py  search.py  twitch.py
maki/wakeword/: README.md  wakeword.py
shared/: bus_logging.py  memory_store.py
src/lib/: ConfigDisplay.svelte  Editor.svelte  Faker.svelte  LRUcache.ts  TimedCache.ts  commands.ts  config.ts  controller.ts  seventv.ts  speech.ts  twitch.ts  utils.ts
src/lib/server/: db.ts
src/routes/: +page.svelte
src/routes/attachments/: +server.ts
src/routes/overlay/: +page.svelte  PollObserver.ts  approvable.ts  attachmentsInterface.ts  bid.svelte.ts  captcha.ts  chatbullet.ts  commands.ts  console.svelte  constants.ts  dispatcher.ts  heartrate.ts  heartstockmarket.svelte.ts  karma.ts  kikiapi.ts  maxwell.ts  pointsInterface.ts  poll.svelte.ts  showImage.ts  stores.svelte.ts  timeoutanimation.ts  utils.ts
src/routes/song/: +server.ts
src/routes/songs/: +server.ts
static/: bedgeborderfast.webm  blacksilence.webm  judgement.m4a  mistake.webm  thinkfast.webm
support/: beepboxstandalone.ts  db.ts  deploy.ts  index.ts  websocket.ts
trinket/: README.md  pyproject.toml
trinket/src/trinket/: controller.py  main.py  support.py
trinket/src/trinket/events/: 01.py  TODO.md
trinket/src/trinket/events/first/: bases.py  card_window.py  game.py  mob_window.py  stats_window.py  vital_stats_window.py
trinket/src/trinket/events/first/cards/: base.py  basic_attack.py  heal.py
trinket/src/trinket/events/first/mobs/: mob.py  slime.py
trinket/src/trinket/frames/: boss_fight.py  brainrot.py  bullet_chat.py  emote_guess.py  rotate.py  shared.py  song_guess.py  warning.py  warnings.py
trinket/src/trinket/receiver/: console.py  model.py  ws.py
trinket/src/trinket/resources/: .gitignore  CREDITS.md  first_trumpet.m4a  second_trumpet.m4a  third_trumpet.m4a
trinket/src/trinket/tools/: get_songs.sh
(+90 files in other folders)
