[project]
name = "heavy"
version = "2.0.0"
description = "Actual TTS"
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
    "aiohttp>=3.13.2",
    "chromadb>=0.6.0",
    "modal>=1.5.2",
    "openai>=2.9.0",
    "soundfile>=0.14.0",
    "torch>=2.13.0",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pyright>=1.1.407",
]
