[project]
name = "maki"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "openai-whisper>=20250625",
    "openwakeword>=0.4.0",
    "pyaudio>=0.2.14",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.29.0",
    "rich>=14.2.0",
    "soundfile>=0.13.1",
    "speechrecognition>=3.14.4",
    "twitchapi>=4.5.0",
    "typer>=0.20.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pyright>=1.1.407",
]
