[project]
name = "trinket"
version = "0.1.0"
description = ""
authors = [
    {name = "codingindex", email = "codingindex@codingindex.xyz"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyqt6==6.8.1",
    "dataclasses-json==0.6.7",
    "websocket-client==1.8.0",
    "cachetools==5.5.2"
]

[tool.poetry.group.dev.dependencies]
mypy = "*"
pylint = "*"
black = "*"
websocat = "*"

[tool.poetry]
packages = [{include = "trinket", from = "src"}]

[tool.pylint."MESSAGES CONTROL"]
disable = [
    "no-name-in-module"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
