[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = "2.0.12"
obws = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
log = { workspace = true }
rouille = "3.6.2"
html-escape = "0.2.13"
openai = "1.1.0"
serde_json = "1.0.140"
